--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mantine/core": "^4.2.8",
     "@mantine/hooks": "^4.2.8",
     "@mantine/next": "^4.2.8",
-    "next": "12.1.6",
+    "next": "^12.1.7-canary.35",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
